# ChangeLog for net-im/kadu
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> -kadu-0.9.2.ebuild:
  Removed 0.9.2 meta-ebuild.

  30 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> kadu-0.11.0_rc1.ebuild,
  kadu-0.11.0_rc2.ebuild, kadu-0.11.0_rc3.ebuild:
  Removed old blockers.

  30 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> kadu-0.9.2.ebuild,
  kadu-0.10.1.ebuild, -kadu-0.11.0_beta1.ebuild, -kadu-0.11.0_beta2.ebuild:
  Removed cruft.

  30 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> kadu-0.9.2.ebuild,
  kadu-0.10.1.ebuild, -kadu-0.11.0_beta1.ebuild, -kadu-0.11.0_beta2.ebuild:
  Removed cruft.

  30 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> kadu-0.9.2.ebuild,
  kadu-0.10.1.ebuild:
  Stabled.

*kadu-0.11.0_rc3 (29 Jan 2012)

  27 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.11.0_rc3.ebuild:
  Bumped.

*kadu-0.11.0_rc2 (16 Jan 2012)

  16 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.11.0_rc2.ebuild:
  Bumped.

*kadu-0.11.0_rc1 (07 Jan 2012)

  07 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.11.0_rc1.ebuild:
  Bumped.

*kadu-0.11.0_beta2 (30 Dec 2011)

  30 Dec 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.11.0_beta2.ebuild:
  Bumped.

*kadu-0.11.0_beta1 (21 Dec 2011)

  21 Dec 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.11.0_beta1.ebuild:
  Bumped.

*kadu-0.10.1 (18 Oct 2011)

  18 Oct 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.10.1.ebuild:
  Bumped.

*kadu-0.10.0-r1 (01 Oct 2011)

  01 Oct 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.10.0-r1.ebuild:
  Rev-bumped to keep up with portage versioning.

  25 Aug 2011; Michał Ziąbkowski <mziab@o2.pl> kadu-0.10.0.ebuild:
  Removed redundant blockers.

*kadu-0.10.0 (24 Aug 2011)

  24 Aug 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.10.0.ebuild:
  Bumped.

*kadu-0.10.0_rc1 (02 Aug 2011)

  02 Aug 2011; Piotr Szymaniak <szarpaj@grubelek.pl> +kadu-0.10.0_rc1.ebuild:
  Bumped.
