@@ -1,8 +1,0 @@
-EBUILD kadu-0.10.0-r1.ebuild 1520 RMD160 5580c058d8bf9414cde61739eedd0a9d2c59f674 SHA1 09510a616e1177ad8eeb829ea7f74bcaadaacec0 SHA256 5f39847a4be8231b2e6ccd37435dbc44a3098d90bfdfda45b35b24e981b0d25a
-EBUILD kadu-0.10.0.ebuild 1520 RMD160 5580c058d8bf9414cde61739eedd0a9d2c59f674 SHA1 09510a616e1177ad8eeb829ea7f74bcaadaacec0 SHA256 5f39847a4be8231b2e6ccd37435dbc44a3098d90bfdfda45b35b24e981b0d25a
-EBUILD kadu-0.10.1.ebuild 1520 RMD160 fd48cdd24e9d632bedac712ce601fc8dcf639ce4 SHA1 2307e48698fcbfab225b5db915fd78b3aee7ec1c SHA256 c75b6af7ea560e67a1bb4c33ccf186c09f989db254f4093a740fb141b4dd967d
-EBUILD kadu-0.11.0_rc1.ebuild 1105 RMD160 c100d8d77d0b197f94231853db806253049cd19e SHA1 3a56858dfc4ff5e8e913228129624b607242f8b6 SHA256 8ccf6ed379eeb723565e1576b0e51ffd5ccda8527e3eb5af3fc98e3ad9dda46a
-EBUILD kadu-0.11.0_rc2.ebuild 1105 RMD160 c100d8d77d0b197f94231853db806253049cd19e SHA1 3a56858dfc4ff5e8e913228129624b607242f8b6 SHA256 8ccf6ed379eeb723565e1576b0e51ffd5ccda8527e3eb5af3fc98e3ad9dda46a
-EBUILD kadu-0.11.0_rc3.ebuild 1104 RMD160 794a607b2d035ac047948e9fe3b705c7d63a07bc SHA1 236d6ec1cc5ed1251c76bf0e4be830df2b22f019 SHA256 a22f922cfbca34a91e6d9281ee494bcd1d038a0d80c7c45e8aecbe6a6ba3400f
-MISC ChangeLog 9272 RMD160 e8ef9eaf29b11fb8bd9a52ddde1fdf386631df55 SHA1 9c4847238425e754ae73d9de65745d4494729553 SHA256 d6e365c5a5decc864e061cd78873b89f68deb547f2d1785b93219ee61a993e49
-MISC metadata.xml 678 RMD160 ad34bb6217a13b2b8c69109e620cebb52d733ffd SHA1 e562e208d3bfeee28903580bab5d9c18a2a49060 SHA256 6ab87103df9957d3d33ee235741a596bed991ae982b4b39f44bc83a4987c743a
