@@ -7,11 +7,6 @@
   <name>Michał Ziąbkowski</name>
 </maintainer>
 <use>
-  <flag name='emoticons'>Installs additional emoticon themes</flag>
-  <flag name='icons'>Installs additional icon themes</flag>
-  <flag name='powerkadu'>Installs powerkadu modules</flag>
-  <flag name='sound'>Installs additional sound themes</flag>
-  <flag name='voice'>Installs voice chat module</flag>
   <flag name='phonon'>Installs phonon audio plugin</flag>
   <flag name='gadu'>Installs GaduGadu support module</flag>
 </use>
