@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Feb 2012; Michał Ziąbkowski <mziab@o2.pl> metadata.xml:
+  Removed redundant flags from metadata.xml.
+
   30 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> -kadu-0.9.2.ebuild:
   Removed 0.9.2 meta-ebuild.
 
